--- a/report/my_report.tex
+++ b/report/my_report.tex
@@ -291,7 +291,7 @@ The flowchart visually maps the Enhanced BGA’s process, clearly highlighting i
 \section{Benchmark Results}
 \label{sec:benchmark_results}
 
-In this section, we present the results obtained by our three algorithms---Simulated Annealing (SA), Standard BGA, and Improved BGA---on three different problem sets. Each subsection provides a table summarising performance metrics across 30 independent runs, focusing on feasibility and overall solution quality. In particular, we report the rate at which each method produces a feasible solution (\emph{Feas.\ Rate}), best/worst feasible cost, average feasible cost (with standard deviation), and average execution time (with standard deviation).
+In this section, we present the results obtained by our three algorithms---Simulated Annealing (SA), Standard BGA, and Improved BGA---on three different problem sets. Each subsection provides a table summarising performance metrics across 30 independent runs, focusing on feasibility and overall solution quality. In particular, we report the rate at which each method produces a feasible solution, best/worst feasible cost, average feasible cost (with standard deviation), and average execution time (with standard deviation).
 
 \subsection{Problem Set \texttt{sppnw41}}
 \label{subsec:sppnw41}
@@ -328,33 +328,33 @@ A brief description of the hyperparameters used in each method can be found belo
     Improved BGA 
       & 30/30 
       & 11,307 
-      & 13,395 
-      & 12,177 
-      & 658 
-      & 2.65 $\pm$ 0.05 \\
+      & 11,676
+      & 11,319 
+      & 66.2
+      & 1.18 $\pm$ 0.06 \\
     \hline
   \end{tabular}
   \caption{Performance on \texttt{sppnw41} (30 runs). Feasible solutions have zero coverage violations.}
 \end{table}
 
-\paragraph{Hyperparameters.}
-\vspace{-0.75em}
+\paragraph{Hyperparameters:}
+\vspace{-1em}
 \begin{itemize}
     \item \textbf{Simulated Annealing (SA).} 
-    Initial temperature $= 2000.0$, 
+    Initial temperature $= 2000$, 
     cooling factor $\alpha = 0.99$, 
     maximum iterations $= 10,000$, 
-    penalty factor $= 50000$. 
+    penalty factor $= 50,000$. 
     \item \textbf{Standard BGA.}
     Population size $= 250$, 
     crossover rate $= 0.8$, 
     mutation rate $= 0.003$, 
     max generations $= 500$, 
-    penalty factor $= 4800.0$, 
+    penalty factor $= 4800$, 
     tournament size $= 4$.
     \item \textbf{Improved BGA.}
-    Population size $= 50$, 
-    max generations $= 200$, 
+    Population size $= 20$, 
+    max generations $= 400$, 
     crossover rate $= 0.85$, 
     base mutation rate $= 0.03$, 
     stochastic rank $p = 0.45$, 
@@ -363,7 +363,7 @@ A brief description of the hyperparameters used in each method can be found belo
 \end{itemize}
 
 \noindent
-As shown, the Improved BGA achieves a 100\% feasibility rate and outperforms the other algorithms in terms of average feasible cost for this problem set, albeit with a slightly longer average run time.
+As shown, the Improved BGA achieves a 100\% feasibility rate and outperforms the other algorithms in terms of average feasible cost for this problem set. The Standard BGA also performs well, with a high feasibility rate and competitive costs. Simulated Annealing, while less consistent, still manages to find feasible solutions in 40\% of runs.
 
 
 \subsection{Problem Set \texttt{sppnw42}}
@@ -392,11 +392,11 @@ A brief description of the hyperparameters used in each method can be found belo
     \hline
     \textbf{SA}          
       & 1/30 
-      & 14,222
-      & 14,222
-      & 14,222
+      & 15,072
+      & 15,072
+      & 15,072
       & 0
-      & 0.608 $\pm$ 0.000 \\
+      & 0.59 $\pm$ 0.000 \\
     \textbf{Standard BGA} 
       & 0/30
       & — 
@@ -407,17 +407,17 @@ A brief description of the hyperparameters used in each method can be found belo
     \textbf{Improved BGA} 
       & 30/30 
       & 7,666
-      & 8,666
-      & 7,927
-      & 284
-      & 19.28 $\pm$ 0.78 \\
+      & 8,944
+      & 7,869
+      & 331
+      & 10.53 $\pm$ 0.28 \\
     \hline
   \end{tabular}
   \caption{Performance on \texttt{sppnw42} (30 runs). Feasible solutions have zero coverage violations.}
 \end{table}
 
 \paragraph{Hyperparameters.}
-\vspace{-0.75em}
+\vspace{-1em}
 \begin{itemize}
     \item \textbf{Simulated Annealing (SA).} 
     Initial temperature $= 5000.0$, 
@@ -432,7 +432,7 @@ A brief description of the hyperparameters used in each method can be found belo
     penalty factor $= 10{,}000$, 
     tournament size $= 5$. 
     \item \textbf{Improved BGA.}
-    Population size $= 30$, 
+    Population size $= 20$, 
     max generations $= 400$, 
     crossover rate $= 0.85$, 
     base mutation rate $= 0.03$, 
@@ -484,21 +484,21 @@ A brief description of the hyperparameters used in each method can be found belo
       & — \\
     \textbf{Improved BGA} 
       & 30/30 
-      & 8{,}974
-      & 10{,}042
-      & 9{,}517
-      & 278
-      & 21.78 $\pm$ 0.47 \\
+      & 8{,}904
+      & 10{,}282
+      & 9{,}528
+      & 373
+      & 11.45 $\pm$ 0.33 \\
     \hline
   \end{tabular}
   \caption{Performance on \texttt{sppnw43} (30 runs). Feasible solutions have zero coverage violations.}
 \end{table}
 
 \paragraph{Hyperparameters.}
-\vspace{-0.75em}
+\vspace{-1em}
 \begin{itemize}
     \item \textbf{Simulated Annealing (SA).}
-    Initial temperature $= 5000.0$, 
+    Initial temperature $= 5000$, 
     cooling factor $\alpha = 0.99$, 
     max iterations $= 10{,}000$, 
     penalty factor $= 100{,}000$. 
@@ -512,7 +512,7 @@ A brief description of the hyperparameters used in each method can be found belo
     tournament size $= 5$. 
     
     \item \textbf{Improved BGA.}
-    Population size $= 30$, 
+    Population size $= 20$, 
     max generations $= 400$, 
     crossover rate $= 0.85$, 
     base mutation rate $= 0.03$, 
@@ -524,10 +524,26 @@ A brief description of the hyperparameters used in each method can be found belo
 \noindent
 As indicated in Table~\ref{tab:sppnw43}, the Standard BGA again failed to produce any feasible solution, whereas Simulated Annealing identified a valid solution in only $16.7\%$ of runs. By contrast, the Improved BGA achieved a $100\%$ feasibility rate with a notably lower mean feasible cost.
 
+\section{Comparison of Results}
+\label{sec:comparison}
 
-\section{Discussion and Comparison}
-\label{sec:discussion}
+In this section, we compare the performance of Simulated Annealing (SA), the Standard Binary Genetic Algorithm (BGA), and the Improved BGA across three benchmark problem sets (\texttt{sppnw41}, \texttt{sppnw42}, and \texttt{sppnw43}). Our comparison focuses on feasibility (the percentage of runs that yield a valid solution), the quality of feasible solutions (best, worst, and mean feasible cost), and runtime metrics (mean execution time). We also reflect on key hyperparameters that potentially explain differences in performance.
 
+\subsection{Feasibility and Solution Quality}
+
+Overall, the Improved BGA demonstrates the most robust performance across all three problem sets. It consistently achieves a 100\% feasibility rate, indicating that it almost never fails to produce a valid set-partitioning solution. In problem instances \texttt{sppnw42} and \texttt{sppnw43}, the Improved BGA is essentially the only method obtaining feasible solutions in every run, whereas SA and the Standard BGA sometimes or frequently fail to produce any feasible solutions. The reliability of the Improved BGA can be attributed to several design elements: (1) \emph{pseudo-random initialization} avoids severe over-coverage from the outset, (2) \emph{heuristic improvement (DROP/ADD)} quickly repairs infeasible solutions, and (3) \emph{adaptive mutation} reduces recurring coverage violations by focusing on frequently violated rows.
+
+Focusing on specific metrics in \texttt{sppnw41}, the Improved BGA achieves a 100\% feasibility rate with a best feasible cost of 11,307 and a mean feasible cost of approximately 11,319. By comparison, SA finds feasible solutions only 40\% of the time, and although its best feasible cost is as low as 18,066, the mean feasible cost among runs that succeed is higher (around 23,344). The Standard BGA, with a 70\% feasibility rate in \texttt{sppnw41}, hits a best feasible cost of 12,678 and an average of 20,188 for feasible runs.
+
+The divergence becomes more pronounced in \texttt{sppnw42} and \texttt{sppnw43}, where the Standard BGA produces no feasible solutions in 30 runs, while SA only finds a valid solution once (in \texttt{sppnw42}) or in 5 out of 30 runs (in \texttt{sppnw43}). By contrast, the Improved BGA again remains at 100\% feasibility, maintaining mean feasible costs in the ranges of roughly 7,869–9,528. These outcomes highlight the importance of additional constraint-handling components (such as heuristic repair and adaptive row coverage) present in the Improved BGA but absent or less elaborated in the Standard BGA.
+
+\subsection{Runtime and Hyperparameter Influence}
+
+Regarding runtime, SA typically completes its search in under a second for \texttt{sppnw41} (mean of around 0.082\,s) and stays below a second or two in the other problem sets. The BGAs, by virtue of their population-based operations, require longer: for example, the Standard BGA can take over 30 seconds in some runs of \texttt{sppnw42} and \texttt{sppnw43}, and the Improved BGA often ranges from a few seconds up to tens of seconds. Despite this higher computational cost, the Improved BGA’s advanced operators almost guarantee feasibility and competitive costs.
+
+Hyperparameter choices also play a role in these outcomes. For instance, SA employs a relatively large penalty factor to discourage infeasible columns, but the success rate is heavily influenced by the cooling schedule (initial temperature and alpha). The Standard BGA’s population size, crossover rate, and mutation rate may be effective in moderately constrained SPPs (such as \texttt{sppnw41}) but fall short for larger or more difficult sets. The Improved BGA, on the other hand, leverages a smaller population plus specialized genetic operators (stochastic ranking, adaptive mutation threshold) that prioritize feasibility more effectively.
+
+In summary, although SA has rapid run times, it offers only intermittent feasibility success, and the Standard BGA can excel in simpler instances but may fail completely in more constrained problems. The Improved BGA, while more computationally demanding, consistently yields feasible solutions with the lowest mean cost across all benchmarks, underscoring the benefit of domain-specific heuristics and adaptive strategies in set-partitioning optimisations.
 
 \section{Ranking Replacement vs. Stochastic Ranking}
 \label{sec:ranking}
@@ -536,9 +552,12 @@ Both methods aim to balance cost and constraint satisfaction in the SPP, yet the
 In contrast, the \textbf{Stochastic Ranking} method (Runarsson \& Yao, 2000) uses a bubble-sort-like procedure where adjacent solutions are compared probabilistically—if at least one solution is infeasible, they are compared by cost with a set probability \(P\) (typically less than 0.5) and by unfitness otherwise. This allows for a more adaptive balance, enabling the search to explore infeasible regions as bridges between isolated feasible areas without rigid subgroup thresholds.
 
 In summary, while both methods share the goal of guiding the search toward feasible, high-quality solutions, Ranking Replacement enforces a strict hierarchical structure, whereas Stochastic Ranking offers a flexible, adaptive mechanism that reduces the need for extensive parameter tuning.
-\section{Conclusion}
-This report has presented three advanced algorithms for solving airline crew scheduling problems: Simulated Annealing, a Standard Binary Genetic Algorithm, and an Improved Binary Genetic Algorithm incorporating problem-specific enhancements. Detailed, moderately sized flowcharts and refined pseudocode have been provided to elucidate each method's internal workings. Benchmark results and an in-depth discussion will be appended once experiments are complete. Furthermore, a comparative discussion on constraint-handling—contrasting ranking replacement and stochastic ranking—has been included, underscoring the adaptive advantages of the latter.
 
+
+\section{Conclusion}
+\label{sec:conclusion}
+
+In this report, we have examined three metaheuristic approaches—Simulated Annealing, a Standard Binary Genetic Algorithm, and an Improved BGA—for solving airline crew scheduling within the Set Partitioning Problem framework. Our findings demonstrate that while Simulated Annealing can be fast, it is prone to low feasibility rates under tighter constraints. The Standard BGA, meanwhile, can excel on smaller or less constrained problems but may fail altogether for more difficult instances. By contrast, the Improved BGA consistently achieves near‐perfect feasibility across all benchmarks, providing robust solutions with low cost through specialised operators such as pseudo‐random initialisation, heuristic repair, and stochastic ranking. These results highlight the importance of domain‐specific enhancements and adaptive strategies for reliably navigating complex, highly constrained optimisation landscapes.
 \newpage
 
 \begin{thebibliography}{9}
