--- a/report/report.tex
+++ b/report/report.tex
@@ -290,10 +290,7 @@ In this section, we present the results obtained by our three algorithms---Simul
 \subsection{Problem Set \texttt{sppnw41}}
 \label{subsec:sppnw41}
 
-We tested each algorithm for 30 independent runs on the \texttt{sppnw41} problem instance. 
-Table~\ref{tab:sppnw41} shows the feasibility rate, along with best, worst, and mean feasible costs (plus standard deviation), as well as average run time (plus standard deviation) for each algorithm. 
-All results are based on runs that reached feasibility (zero coverage violations). 
-A brief description of the hyperparameters used in each method can be found below.
+For the \texttt{sppnw41} instance, we summarise the feasibility, cost statistics, and execution times of SA, Standard BGA, and Improved BGA based on 30 independent runs.
 
 \vspace{1em}
 
@@ -332,7 +329,7 @@ A brief description of the hyperparameters used in each method can be found belo
 \end{table}
 
 \paragraph{Hyperparameters:}
-\vspace{-1em}
+\vspace{-1.5em}
 \begin{itemize}
     \item \textbf{Simulated Annealing (SA).} 
     Initial temperature $= 2000$, 
@@ -363,10 +360,7 @@ As shown, the Improved BGA achieves a 100\% feasibility rate and outperforms the
 \subsection{Problem Set \texttt{sppnw42}}
 \label{subsec:sppnw42}
 
-We tested each algorithm for 30 independent runs on the \texttt{sppnw42} problem instance. 
-Table~\ref{tab:sppnw42} shows the feasibility rate, along with best, worst, and mean feasible costs (plus standard deviation), as well as average run time (plus standard deviation) for each algorithm. 
-All results are based on runs that reached feasibility (zero coverage violations). 
-A brief description of the hyperparameters used in each method can be found below.
+For the \texttt{sppnw42} instance, we summarise the feasibility, cost statistics, and execution times of SA, Standard BGA, and Improved BGA based on 30 independent runs.
 
 \vspace{1em}
 
@@ -411,7 +405,7 @@ A brief description of the hyperparameters used in each method can be found belo
 \end{table}
 
 \paragraph{Hyperparameters:}
-\vspace{-1em}
+\vspace{-1.5em}
 \begin{itemize}
     \item \textbf{Simulated Annealing (SA).} 
     Initial temperature $= 5000.0$, 
@@ -441,10 +435,7 @@ As shown, the Standard BGA failed to reach feasibility in any run, while Simulat
 \subsection{Problem Set \texttt{sppnw43}}
 \label{subsec:sppnw43}
 
-We tested each algorithm for 30 independent runs on the \texttt{sppnw43} problem instance. 
-Table~\ref{tab:sppnw43} shows the feasibility rate, along with best, worst, and mean feasible costs (plus standard deviation), as well as average run time (plus standard deviation) for each algorithm. 
-All results are based on runs that reached feasibility (zero coverage violations). 
-A brief description of the hyperparameters used in each method can be found below.
+For the \texttt{sppnw43} instance, we summarise the feasibility, cost statistics, and execution times of SA, Standard BGA, and Improved BGA based on 30 independent runs.
 
 \vspace{1em}
 
@@ -489,7 +480,7 @@ A brief description of the hyperparameters used in each method can be found belo
 \end{table}
 
 \paragraph{Hyperparameters:}
-\vspace{-1em}
+\vspace{-1.5em}
 \begin{itemize}
     \item \textbf{Simulated Annealing (SA).}
     Initial temperature $= 5000$, 
@@ -521,7 +512,7 @@ As indicated in Table~\ref{tab:sppnw43}, the Standard BGA again failed to produc
 \section{Comparison of Results}
 \label{sec:comparison}
 
-In this section, we compare the performance of Simulated Annealing (SA), the Standard Binary Genetic Algorithm (BGA), and the Improved BGA across three benchmark problem sets (\texttt{sppnw41}, \texttt{sppnw42}, and \texttt{sppnw43}). Our comparison focuses on feasibility (the percentage of runs that yield a valid solution), the quality of feasible solutions (best, worst, and mean feasible cost), and runtime metrics (mean execution time). We also reflect on key hyperparameters that potentially explain differences in performance.
+In this section, we compare the performance of Simulated Annealing (SA), the Standard Binary Genetic Algorithm (BGA), and the Improved BGA across three benchmark problem sets. Our comparison focuses on feasibility (the percentage of runs that yield a valid solution), the quality of feasible solutions (best, worst, and mean feasible cost), and runtime metrics (mean execution time). We also reflect on key hyperparameters that potentially explain differences in performance.
 
 \subsection{Feasibility and Solution Quality}
 
@@ -529,7 +520,7 @@ Overall, the Improved BGA demonstrates the most robust performance across all th
 
 Focusing on specific metrics in \texttt{sppnw41}, the Improved BGA achieves a 100\% feasibility rate with a best feasible cost of 11,307 and a mean feasible cost of approximately 11,319. By comparison, SA finds feasible solutions only 40\% of the time, and although its best feasible cost is as low as 18,066, the mean feasible cost among runs that succeed is higher (around 23,344). The Standard BGA, with a 70\% feasibility rate in \texttt{sppnw41}, hits a best feasible cost of 12,678 and an average of 20,188 for feasible runs.
 
-The divergence becomes more pronounced in \texttt{sppnw42} and \texttt{sppnw43}, where the Standard BGA produces no feasible solutions in 30 runs, while SA only finds a valid solution once (in \texttt{sppnw42}) or in 5 out of 30 runs (in \texttt{sppnw43}). By contrast, the Improved BGA again remains at 100\% feasibility, maintaining mean feasible costs in the ranges of roughly 7,869–9,528. These outcomes highlight the importance of additional constraint-handling components (such as heuristic repair and adaptive row coverage) present in the Improved BGA but absent or less elaborated in the Standard BGA.
+The divergence becomes more pronounced in \texttt{sppnw42} and \texttt{sppnw43}, where the Standard BGA produces no feasible solutions in 30 runs, while SA only finds a valid solution once (in \texttt{sppnw42}) or in 5 out of 30 runs (in \texttt{sppnw43}). By contrast, the Improved BGA again remains at 100\% feasibility, maintaining mean feasible costs in the ranges of roughly 7,869–9,528. These outcomes highlight the importance of additional constraint-handling components present in the Improved BGA but absent or less elaborated in the Standard BGA.
 
 \subsection{Runtime and Hyperparameter Influence}
 
@@ -541,9 +532,9 @@ In summary, although SA has rapid run times, it offers only intermittent feasibi
 
 \section{Ranking Replacement vs. Stochastic Ranking}
 \label{sec:ranking}
-Both methods aim to balance cost and constraint satisfaction in the SPP, yet they differ in approach. The \textbf{Ranking Replacement} method (Chu \& Beasley, 1998) partitions the population deterministically into four subgroups based on fitness (cost) and unfitness (constraint violation). A new solution replaces an individual from the first non-empty subgroup (starting with those worst in both criteria), thereby steadily improving the overall population. This approach offers a clear structure but can be rigid as the balance between cost and constraint violation may evolve during the search.
+Both methods aim to balance cost and constraint satisfaction in the SPP, yet they differ in approach. The \textbf{Ranking Replacement} method \cite{ChuAndBeasley1998} partitions the population deterministically into four subgroups based on fitness (cost) and unfitness (constraint violation). A new solution replaces an individual from the first non-empty subgroup (starting with those worst in both criteria), thereby steadily improving the overall population. This approach offers a clear structure but can be rigid as the balance between cost and constraint violation may evolve during the search.
 
-In contrast, the \textbf{Stochastic Ranking} method (Runarsson \& Yao, 2000) uses a bubble-sort-like procedure where adjacent solutions are compared probabilistically—if at least one solution is infeasible, they are compared by cost with a set probability \(P\) (typically less than 0.5) and by unfitness otherwise. This allows for a more adaptive balance, enabling the search to explore infeasible regions as bridges between isolated feasible areas without rigid subgroup thresholds.
+In contrast, the \textbf{Stochastic Ranking} method \cite{RunarssonYao2000} uses a bubble-sort-like procedure where adjacent solutions are compared probabilistically—if at least one solution is infeasible, they are compared by cost with a set probability \(P\) (typically less than 0.5) and by unfitness otherwise. This allows for a more adaptive balance, enabling the search to explore infeasible regions as bridges between isolated feasible areas without rigid subgroup thresholds.
 
 In summary, while both methods share the goal of guiding the search toward feasible, high-quality solutions, Ranking Replacement enforces a strict hierarchical structure, whereas Stochastic Ranking offers a flexible, adaptive mechanism that reduces the need for extensive parameter tuning.
 
@@ -551,7 +542,7 @@ In summary, while both methods share the goal of guiding the search toward feasi
 \section{Conclusion}
 \label{sec:conclusion}
 
-In this report, we have examined three metaheuristic approaches—Simulated Annealing, a Standard Binary Genetic Algorithm, and an Improved BGA—for solving airline crew scheduling within the Set Partitioning Problem framework. Our findings demonstrate that while Simulated Annealing can be fast, it is prone to low feasibility rates under tighter constraints. The Standard BGA, meanwhile, can excel on smaller or less constrained problems but may fail altogether for more difficult instances. By contrast, the Improved BGA consistently achieves near‐perfect feasibility across all benchmarks, providing robust solutions with low cost through specialised operators such as pseudo‐random initialisation, heuristic repair, and stochastic ranking. These results highlight the importance of domain‐specific enhancements and adaptive strategies for reliably navigating complex, highly constrained optimisation landscapes.
+In this report, we have examined three metaheuristic approaches—Simulated Annealing, a Standard BGA, and an Improved BGA—for solving airline crew scheduling within the Set Partitioning Problem framework. Our findings demonstrate that while Simulated Annealing can be fast, it is prone to low feasibility rates under tighter constraints. The Standard BGA, meanwhile, can excel on smaller or less constrained problems but may fail altogether for more difficult instances. By contrast, the Improved BGA consistently achieves near‐perfect feasibility across all benchmarks, providing robust solutions with low cost through specialised operators such as pseudo‐random initialisation, heuristic repair, and stochastic ranking. These results highlight the importance of domain‐specific enhancements and adaptive strategies for reliably navigating complex, highly constrained optimisation landscapes.
 \newpage
 
 \begin{thebibliography}{9}
